--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-reduindx": "latest",
     "react-sticky-header": "latest",
     "@material-ui/core": "latest",
-    "@material-ui/icons": "latest"
+    "@material-ui/icons": "latest",
+    "react-router-redux": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
