--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-sticky-header": "latest",
     "@material-ui/core": "latest",
     "@material-ui/icons": "latest",
-    "react-router-redux": "latest"
+    "react-router-redux": "latest",
+    "firebase": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
