Dodanie responsywności; ogólna refaktoryzacja styli

--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-scripts": "1.1.4",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-router": "^2.0.0",
-    "react-redux": "latest",
-    "redux": "latest",
-    "react-router-reduindx": "latest",
-    "react-sticky-header": "latest",
     "@material-ui/core": "latest",
     "@material-ui/icons": "latest",
-    "react-router-redux": "latest",
     "firebase": "latest",
-    "react-file-reader-input": "latest"
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-file-reader-input": "latest",
+    "react-redux": "latest",
+    "react-router": "^2.0.0",
+    "react-router-redux": "latest",
+    "react-scripts": "1.1.4",
+    "react-sticky-header": "latest",
+    "redux": "latest",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
